--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -23,9 +23,6 @@ body {
     color: rgb(50, 50, 50);
     font-size: 1.75em;
     margin:  0;
-}
-
-.header__logo {
     cursor: default;
 }
 
@@ -117,6 +114,14 @@ body {
         font-size: 8px;
     }
 
+    .header__logo {
+        font-size: 2.7em;
+    }
+
+    .header {
+        justify-content: center;
+    }
+
     .body {
         flex-direction: column-reverse;
     }
@@ -125,6 +130,11 @@ body {
         width: 100%;
         margin-right: 0;
         margin-left: 5%;
+    }
+
+    .body__img {
+        margin-top: -8em;
+        margin-bottom: 2em;
     }
 
     .header__list {
