--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -52,7 +52,7 @@ body {
 }
 
 .body__img {
-    width: 6.25em;
+    width: 30vw;
 }
 
 .body {
@@ -65,7 +65,7 @@ body {
 }
 
 .body__text {
-    width: 27.2em;
+    width: 30vw;
     margin-right: 2.5em;
     transition: 0.4s;
     overflow: hidden;
@@ -81,8 +81,8 @@ body {
 
 .body__text__btn {
     position: relative;
-    width: 8.75em;
-    height: 2.75em;
+    width: 15vw;
+    height: 10vh;
     background-color: #3F6D8D;
     color: #fff;
     font-size: 1.75em;
@@ -183,16 +183,15 @@ body {
 
 .products-container {
     position: relative;
-    left: 1500px;
-    bottom: 600px;
+    transform: translate(102vw, -88vh);
     display: flex;
     width: 45%;
     height: 80%;
     background-color: rgb(236, 236, 236);
     border-radius: 10px;
     justify-content: center;
-    transition: 0.4s;
     opacity: 0;
+    transition: 0.4s;
 }
 
 @keyframes fadeIn {
@@ -206,7 +205,7 @@ body {
 
 .products-container--click {
     animation: fadeIn 0.4s ease-in;
-    transform: translate(-45em);
+    transform: translate(51.5vw, -88vh);
     opacity: 1;
 }
 
